--- a/lesson2-focus/02-dom-order/index.html
+++ b/lesson2-focus/02-dom-order/index.html
@@ -21,13 +21,7 @@
       </nav>
     </div>
   </header>
-  <div class="newsletter">
-    <div class="container">
-      <h3>Like the Funion? Consider joining our newsletter!</h3>
-      <input type="text">
-      <button>Sign Up</button>
-    </div>
-  </div>
+  
   <main class="container">
     <h2 class="offscreen">Top story</h2>
     <article class="main-story">
@@ -90,6 +84,10 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="newsletter">    <div class="container">      <h3>Like the Funion? Consider joining our newsletter!</h3>      <input type="text">      <button>Sign Up</button>    </div>  </div>
+  </footer>  
+  
 </body>
 
 </html>
