--- a/lesson2-focus/02-dom-order/index.html
+++ b/lesson2-focus/02-dom-order/index.html
@@ -84,15 +84,14 @@
       </div>
     </div>
   </main>
-  <footer>
-    <div class="newsletter">
+    <footer class="newsletter">
       <div class="container">
         <h3>Like the Funion? Consider joining our newsletter!</h3>
         <input type="text">
         <button>Sign Up</button>
       </div>
-    </div>
-  </footer>  
+    </footer>
+  
   
 </body>
 
